# artifacts/api-server/src/routes/index.ts
@@ -1,12 +1,12 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
 import postsRouter from "./posts";
-import countriesRouter from "./countries";
+import tripsRouter from "./trips";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
 router.use(postsRouter);
-router.use(countriesRouter);
+router.use(tripsRouter);
 
 export default router;
